# agent-trust-stack

./: .gitignore  ARCIUM-PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LAUNCH-CHECKLIST.md  LICENSE  METRICS.md  PROJECT-SUMMARY.md  PROJECT_LOG.md  README-ARCIUM.md  README.md  SOCIAL-DRAFTS.md  SPEC.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
examples/: basic_usage.py
src/agent_trust_stack/: __init__.py  attestations.py  credentials.py  crypto.py  hygiene.py  identity.py  ledger.py  metrics.py  pdr.py  provenance.py  reputation.py
tests/: __init__.py  quick_test.py  test_identity.py
tests/unit/: test_hygiene.py  test_ledger.py  test_metrics.py
