[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trust-stack"
version = "0.1.0-alpha"
description = "Post-quantum secure trust framework for AI agents with OQS cryptography"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent Trust Stack Contributors", email = "contributor@example.com"}
]
keywords = [
    "post-quantum",
    "cryptography",
    "ai-agents",
    "decentralized-identity",
    "did",
    "verifiable-credentials",
    "reputation",
    "oqs",
    "kyber",
    "dilithium"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "oqs-python>=0.10.0",
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "python-did>=0.4.0",
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "cbor2>=5.4.0",
    "base58>=2.1.1",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
ipfs = [
    "ipfshttpclient>=0.8.0",
]
dlts = [
    "web3>=6.10.0",
    "eth-account>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agent-trust-stack"
Documentation = "https://agent-trust-stack.readthedocs.io"
Repository = "https://github.com/your-org/agent-trust-stack"
Issues = "https://github.com/your-org/agent-trust-stack/issues"
Changelog = "https://github.com/your-org/agent-trust-stack/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=agent_trust_stack",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agent_trust_stack"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
